<resources>
    <string name="app_name">BuddyChat</string>
    <string name="welcome">Welcom to BuddyChat App</string>
    <string name="register">Need A New Account</string>
    <string name="have_account">Already Have Account</string>
    <string name="name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_account">Login</string>
    <string name="log_out">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_chat_fragment">Hello chat fragment</string>
    <string name="hello_friends_fragment">Hello friends fragment</string>
    <string name="hello_requests_fragment">Hello requests fragment</string>


</resources>
